test/JDBC/expected/sys-sp_statistics_100-vu-verify.out
-- syntax error: @table_name is required
exec [sys].sp_statistics_100
go
~~ERROR (Code: 201)~~

~~ERROR (Message: procedure sys.sp_statistics_100 expects parameter "@table_name", which was not supplied.)~~


exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t1'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~ERROR (Code: 33557097)~~

~~ERROR (Message: negative substring length not allowed)~~


exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t2', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~ERROR (Code: 33557097)~~

~~ERROR (Message: negative substring length not allowed)~~


exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t2', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~ERROR (Code: 33557097)~~

~~ERROR (Message: negative substring length not allowed)~~


exec [sys].sp_statistics_100 'sys_sp_statistics_100_vu_prepare_t1', 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~ERROR (Code: 33557097)~~

~~ERROR (Message: negative substring length not allowed)~~


exec sp_statistics_100 N'sys_sp_statistics_100_vu_prepare_t1',N'dbo',NULL,N'%',N'Y',N'Q'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#sys_sp_statistics_100_vu_prepare_t1#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#-1#!#0#!#<NULL>
~~END~~


exec sp_statistics_100 N'sys_sp_statistics_100_vu_prepare_t2',N'dbo',NULL,N'%',N'Y',N'Q'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#sys_sp_statistics_100_vu_prepare_t2#!#0#!#sys_sp_statistics_100_vu_prepare_t2#!#sys_sp_statistics_100_vu_prepare_t2_pkey#!#3#!#1#!#b#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#sys_sp_statistics_100_vu_prepare_t2#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#-1#!#0#!#<NULL>
~~END~~


exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t3'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#sys_sp_statistics_100_vu_prepare_t3#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#-1#!#0#!#<NULL>
~~END~~


use sys_sp_statistics_100_vu_prepare_db1
go

exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t2', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~END~~


exec [sys].sp_statistics_100 @table_name = 'sys_sp_statistics_100_vu_prepare_t1', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~END~~

